# wgpu

./: .deny.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  renovate.json  rust-toolchain.toml  typos.toml
.config/: nextest.toml
.github/: dependabot.yml  pull_request_template.md
.github/actions/install-dxc/: action.yml
.github/actions/install-warp/: action.yml
.github/install-mesa-action/: action.yml
.github/workflows/: ci.yml  cts.yml  docs.yml  generate.yml  shaders.yml
benches/: Cargo.toml
benches/benches/: root.rs  shader.rs
benches/benches/wgpu-benchmark/: renderpass.rs  shader.rs
cts_runner/: Cargo.toml  revision.txt  test.lst
cts_runner/examples/: hello-compute.js
cts_runner/src/: bootstrap.js  main.rs
cts_runner/tests/: features.js  integration.rs
deno_webgpu/: 01_webgpu.js  Cargo.toml  adapter.rs  buffer.rs  command_buffer.rs  command_encoder.rs  device.rs  error.rs  lib.rs  query_set.rs  queue.rs  render_pass.rs  shader.rs  texture.rs  webgpu.idl  webidl.rs
docs/: release-checklist.md  review-checklist.md  testing.md
docs/api-specs/: ray_tracing.md
examples/: README.md
examples/features/: Cargo.toml
examples/features/src/: framework.rs  lib.rs  main.rs  utils.rs
examples/standalone/01_hello_compute/: Cargo.toml
examples/standalone/02_hello_window/: Cargo.toml
examples/standalone/03_custom_backend/: Cargo.toml
examples/standalone/03_custom_backend/src/: custom.rs  main.rs
examples/standalone/custom_backend/: Cargo.toml
naga/: Cargo.toml
naga-cli/: Cargo.toml
naga/fuzz/: Cargo.toml
naga/hlsl-snapshots/: Cargo.toml
naga/src/: lib.rs  span.rs
naga/src/back/: mod.rs  pipeline_constants.rs
naga/src/back/dot/: mod.rs
naga/src/back/glsl/: features.rs  mod.rs
naga/src/back/hlsl/: conv.rs  help.rs  mod.rs  ray.rs  writer.rs
naga/src/back/msl/: mod.rs  writer.rs
naga/src/back/spv/: block.rs  image.rs  index.rs  instructions.rs  mod.rs  ray.rs  writer.rs
naga/src/back/wgsl/: mod.rs  writer.rs
naga/src/common/: diagnostic_debug.rs  diagnostic_display.rs  mod.rs  wgsl.rs
naga/src/common/wgsl/: mod.rs  to_wgsl.rs  types.rs
naga/src/compact/: mod.rs
naga/src/front/: type_gen.rs
naga/src/front/glsl/: builtins.rs
naga/src/front/spv/: function.rs  mod.rs
naga/src/front/wgsl/: error.rs  index.rs  mod.rs  tests.rs  to_wgsl.rs
naga/src/front/wgsl/lower/: construction.rs  conversion.rs  mod.rs
naga/src/front/wgsl/parse/: ast.rs  conv.rs  directive.rs  lexer.rs  mod.rs
naga/src/front/wgsl/parse/directive/: enable_extension.rs
naga/src/ir/: mod.rs
naga/src/proc/: constant_evaluator.rs  index.rs  layouter.rs  mod.rs  namer.rs  type_methods.rs  typifier.rs
naga/src/proc/overloads/: mathfunction.rs  regular.rs
naga/src/valid/: analyzer.rs  compose.rs  expression.rs  function.rs  handles.rs  interface.rs  mod.rs  type.rs
naga/tests/: snapshots.rs  spirv_capabilities.rs  validation.rs  wgsl_errors.rs
naga/tests/in/glsl/: dual-source-blending.toml  images.frag  samplers.frag
naga/tests/in/spv/: subgroup-barrier.toml
naga/tests/in/wgsl/: abstract-types-atomic.wgsl  abstract-types-return.wgsl  abstract-types-texture.wgsl  abstract-types-var.wgsl  access.wgsl  aliased-ray-query.wgsl  atomicTexture.toml  bits-optimized-msl.toml  bits.toml  clip-distances.toml  const-exprs.wgsl  const_assert.wgsl  constructors.wgsl  control-flow.toml  control-flow.wgsl  conversion-float-to-int-no-f64.toml  conversion-float-to-int.toml  debug-symbol-large-source.wgsl  debug-symbol-terrain.wgsl  dualsource.toml  early-depth-test-conservative.toml  early-depth-test-force.toml  f16.toml  f16.wgsl  functions-optimized-by-version.toml  functions-optimized.toml  functions-unoptimized.toml  image.wgsl  int64.wgsl  msl-vpt-formats-x4.toml  operators.wgsl  subgroup-operations.toml  types_with_comments.wgsl
naga/tests/naga/: snapshots.rs  validation.rs  wgsl_errors.rs
naga/xtask/: Cargo.toml
naga/xtask/src/: main.rs  validate.rs
player/: Cargo.toml
player/src/: lib.rs
player/tests/: root.rs
player/tests/player/: main.rs
tests/: Cargo.toml
tests/gpu-tests/: create_surface_error.rs  device.rs  draw_indirect.rs  root.rs  texture_view_creation.rs
tests/gpu-tests/ray_tracing/: as_build.rs
tests/gpu-tests/shader/: array_size_overrides.rs  mod.rs
tests/src/: expectations.rs  init.rs  lib.rs  params.rs  run.rs
tests/tests/wgpu-dependency/: main.rs
tests/tests/wgpu-gpu/: bind_group_layout_dedup.rs  bind_groups.rs  buffer.rs  clear_texture.rs  clip_distances.rs  device.rs  draw_indirect.rs  dual_source_blending.rs  encoder.rs  life_cycle.rs  main.rs  mem_leaks.rs  oom.rs  push_constants.rs  render_pass_ownership.rs  render_target.rs  timestamp_query.rs  zero_init_texture_after_discard.rs
tests/validation-tests/: noop.rs  root.rs
tests/validation-tests/api/: buffer_slice.rs  instance.rs  mod.rs  texture.rs
wgpu/: Cargo.toml  build.rs
wgpu-core/: Cargo.toml
wgpu-core/src/: indirect_draw_validation.rs  indirect_validation.rs  instance.rs  lib.rs  ray_tracing.rs  resource.rs
wgpu-core/src/command/: bundle.rs  clear.rs  compute.rs  mod.rs  query.rs  ray_tracing.rs  render.rs  transfer.rs
wgpu-core/src/device/: global.rs  mod.rs  queue.rs  resource.rs
wgpu-core/src/indirect_validation/: draw.rs  mod.rs  validate_draw.wgsl
wgpu-core/src/lock/: observing.rs  rank.rs  vanilla.rs
wgpu-core/src/timestamp_normalization/: mod.rs
wgpu-hal/: Cargo.toml
wgpu-hal/examples/: raw-gles.rs
wgpu-hal/examples/halmark/: main.rs
wgpu-hal/examples/ray-traced-triangle/: main.rs
wgpu-hal/src/: lib.rs
wgpu-hal/src/auxil/: renderdoc.rs
wgpu-hal/src/dx12/: adapter.rs  command.rs  device.rs  instance.rs  mod.rs  suballocation.rs
wgpu-hal/src/dynamic/: command.rs
wgpu-info/src/: human.rs
wgpu-macros/: Cargo.toml
wgpu-macros/src/: lib.rs
wgpu-types/: Cargo.toml
wgpu-types/src/: features.rs  instance.rs  lib.rs
wgpu/src/: cmp.rs  dispatch.rs  lib.rs  macros.rs
xtask/: Cargo.toml
xtask/src/: check_feature_dependencies.rs  cts.rs  main.rs  run_wasm.rs  vendor_web_sys.rs
(+236 files in other folders)
