[package]
name = "custom-backend"
description = "Example of creating and loading custom wgpu backend"
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
wgpu = { workspace = true, features = ["custom"], default-features = false }
pollster = { workspace = true, features = ["macro"] }

[lints]
workspace = true
